src/test/compile-fail/fail-simple.rs
./src/test/compile-fail/fail-simple.rs:5:9:5:10: [1;31merror:[0m unexpected token: ;
./src/test/compile-fail/fail-simple.rs:5   fail @ ;
                                                  ^
rt: ---
rt: f00e:main:main:                   upcall fail 'explicit failure', src/comp/syntax/parse/parser.rs:112
rt: f00e:main:                        domain main @0x994f04c root task failed
